without file path
without file path

--- a/project-data.json
+++ b/project-data.json
@@ -1,8 +1,8 @@
 {
   "workbooks": [
     {
-      "name": "SP_New_Dashboard",
-      "file_path": "SP_New_Dashboard.twbx",
+      "name": "SP__Dashboard",
+      "file_path": "",
       "project_path": "Technology",
       "tags": [
         "sample",
