new comment added
new comment added

--- a/project-data.json
+++ b/project-data.json
@@ -1,7 +1,7 @@
 {
   "workbooks": [
     {
-      "name": "SP__Dashboard_New",
+      "name": "Sales__Dashboard",
       "file_path": "",
       "project_path": "Technology",
       "tags": [
