new script and file
new script and file

--- a/project-data.json
+++ b/project-data.json
@@ -2,7 +2,7 @@
   "workbooks": [
     {
       "name": "Sales_profit_New",
-      "file_path": "Sales_profit_New",
+      "file_path": "Sales_profit.twbx",
       "project_path": "Technology",
       "tags": [
         "Sales2022",
