--- a/project-data.json
+++ b/project-data.json
@@ -1,8 +1,8 @@
 {
   "workbooks": [
     {
-      "name": "S&P_New",
-      "file_path": "S&P_New.twbx",
+      "name": "S&P_1",
+      "file_path": "S&P_1.twbx",
       "project_path": "Technology",
       "tags": [
         "SP CY",
@@ -15,8 +15,8 @@
       "description": "Sample description"
     },
     {
-      "name": "Sales_New",
-      "file_path": "Sales_New_.twbx",
+      "name": "Sales_1",
+      "file_path": "Sales_1__.twbx",
       "project_path": "Technology",
       "tags": [
         "Sales CY",
