refactor : update workbook
jira: DCS=1890

--- a/project-data.json
+++ b/project-data.json
@@ -9,24 +9,10 @@
         "Crop"
       ],
       "hidden_views": [
-        "State","Price Forecast"
+        "Forecast","Price Forecast"
       ],
-      "show_tabs": true,
+      "show_tabs": false,
       "description": "Price Forecast"
-    },
-    {
-      "name": "Superstore_Sales_&_Profit",
-      "file_path": "Superstore_Sales_&_Profit.twb",
-      "project_path": "Technology",
-      "tags": [
-        "Sales CY",
-        "Profit CY"
-      ],
-      "hidden_views": [
-        ""
-      ],
-      "show_tabs": true,
-      "description": "Sample description"
     }
   ]
 }
