--- a/project-data.json
+++ b/project-data.json
@@ -1,8 +1,8 @@
 {
   "workbooks": [
     {
-      "name": "Price Forecast",
-      "file_path": "Price Forecast.twbx",
+      "name": "Price Forecast New",
+      "file_path": "Price Forecast New.twbx",
       "project_path": "Technology",
       "tags": [
         "Forecasting",
