refactor: updating forecast
jira: DCS-1869

--- a/project-data.json
+++ b/project-data.json
@@ -1,8 +1,8 @@
 {
   "workbooks": [
     {
-      "name": "Price Forecast New",
-      "file_path": "Price Forecast New.twbx",
+      "name": "Price Forecast",
+      "file_path": "Price Forecast.twbx",
       "project_path": "Technology",
       "tags": [
         "Forecasting",
@@ -11,7 +11,7 @@
       "hidden_views": [
         "Forecast","Price Forecast"
       ],
-      "show_tabs": false,
+      "show_tabs": true,
       "description": "Price Forecast"
     }
   ]
