--- a/.github/workflows/PublishWorkbookWorkflow.yml
+++ b/.github/workflows/PublishWorkbookWorkflow.yml
@@ -1,5 +1,4 @@
 name: PublishWorkbook
-on: [workflow_dispatch]
 on:
   pull_request:
     branches:
@@ -9,7 +8,8 @@ env:
   UNAME: ${{secrets.USERNAME}}
   PASS: ${{secrets.PASSWORD}}
   SERVURL: ${{secrets.SERVERURL}}
-
+on:
+   workflow_dispatch
 jobs:
   Publish:
     runs-on: ubuntu-latest
