refactor: update manual workflow
jira: DCS-1788

--- a/.github/workflows/PublishWorkbookWorkflow.yml
+++ b/.github/workflows/PublishWorkbookWorkflow.yml
@@ -1,13 +1,15 @@
 name: PublishWorkbook
 on:
+  workflow_dispatch:
   pull_request:
     branches:
-      - main
-    types: [closed]
+      - master
+
 env:
   UNAME: ${{secrets.USERNAME}}
   PASS: ${{secrets.PASSWORD}}
   SERVURL: ${{secrets.SERVERURL}}
+
 jobs:
   Publish:
     runs-on: ubuntu-latest
@@ -36,7 +38,7 @@ jobs:
         run: |
           project_data=`jq '.workbooks' project-data.json`
           if [ "$project_data" != '' ];then
-              python3 publish_workbook.py --username ${{env.UNAME}} --password ${{env.PASS}} --server_url "${{env.SERVURL}}" --project_data "${project_data}"
+              python3 ./scripts/publish_workbook.py --username ${{env.UNAME}} --password ${{env.PASS}} --server_url "${{env.SERVURL}}" --project_data "${project_data}"
           else
               echo "project data of json is not accessable."
           fi
