--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -1,8 +1,8 @@
 {
   "workbooks": [
     {
-      "name": "Price Forecast1",
-      "file_path": "Price Forecast1.twbx",
+      "name": "Price_Forecast",
+      "file_path": "Price_Forecast.twbx",
       "project_path": "Technology",
       "tags": [
     
