--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -2,7 +2,7 @@
   "workbooks": [
     {
       "name": "Price_Forecast",
-      "file_path": "Price_Forecast.twbx",
+      "file_path": "Price_Forecast1.twbx",
       "project_path": "Technology",
       "tags": [
     
