--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -11,7 +11,7 @@
         
       ],
       "show_tabs": true,
-      "description": "forecast"
+      "description": "forecast update"
     }
   ]
 }
