refactor: updating pyhton
jira: DCS-1890

--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -11,7 +11,7 @@
         
       ],
       "show_tabs": true,
-      "description": "forecast update"
+      "description": "with only json"
     }
   ]
 }
