publish in Test folder
publish in Test folder

--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -3,7 +3,7 @@
     {
       "name": "Forecast",
       "file_path": "Forecast.twbx",
-      "project_path": "Technology",
+      "project_path": "Test",
       "tags": [ "price", "Sales"
     
       ],
