--- a/.github/workflows/PublishWorkbookWorkflow.yml
+++ b/.github/workflows/PublishWorkbookWorkflow.yml
@@ -8,21 +8,23 @@ on:
 env:
   UNAME: ${{secrets.USERNAME}}
   PASS: ${{secrets.PASSWORD}}
-  SERVURL: ${{secrets.SERVERURL}}
+  PROD_UNAME: ${{secrets.PROD_USERNAME}}
+  PROD_PASS: ${{secrets.PROD_PASSWORD}}
 
 jobs:
   Publish:
     runs-on: ubuntu-latest
+    # environment: production
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          lfs: true
+          # lfs: true
           fetch-depth: 0
 
-      - name: Checkout LFS objects
-        run: git lfs checkout
+      # - name: Checkout LFS objects
+      #   run: git lfs checkout
 
       - name: Setup Python
         uses: actions/setup-python@v3
@@ -38,7 +40,7 @@ jobs:
         run: |
           project_data=`jq '.workbooks' ./scripts/project-data.json`
           if [ "$project_data" != '' ];then
-              python3 ./scripts/publish_workbook.py --username ${{env.UNAME}} --password ${{env.PASS}} --server_url "${{env.SERVURL}}" --project_data "${project_data}"
+              python3 ./scripts/main.py --username "${{env.UNAME}}" --password "${{env.PASS}}" --produsername "${{env.PROD_UNAME}}" --prodpassword "${{env.PROD_PASS}}"  --project_data "${project_data}"
           else
               echo "project data of json is not accessable."
           fi
