--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -1,30 +1,68 @@
 {
   "workbooks": [
     {
-      "name": "Scorecard New",
-      "file_path": "Scorecard New.twbx",
-      "project_path": "Online",
-      "tags": [ "price", "Sales"
-    
-      ],
-      "hidden_views": [
-        
-      ],
-      "show_tabs": true,
-      "description": "sample"
-    },
-    {
-      "name": "DTech New",
-      "file_path": "DTech New.twb",
-      "project_path": "Working",
-      "tags": [ "price", "Sales"
-    
-      ],
-      "hidden_views": [
-        
-      ],
-      "show_tabs": true,
-      "description": "New"
+      "dev_server_url": "https://tableau.devinvh.com/",
+      "prod_server_url": "http://tableau-alb-316754542.us-east-1.elb.amazonaws.com/",
+      "is_wb_publish": true,
+      "publish_wb_data": {
+        "server_name": "dev",
+        "site_id": "e4fc3628-68b4-4a72-a956-9fc3c02192f4",
+        "site_name": "DataLab",
+        "project_path": "Development",
+        "wb_name": "Forecast 2022",
+        "file_path": "Forecast 2022.twbx",
+        "tags": ["forecast"],
+        "hidden_views": [],
+        "is_site_default": false,
+        "show_tabs": true
+      },
+      "is_wb_permissions_update": true,
+      "permissions": [
+        {
+          "permission_group_name": "All Users",
+          "permission_user_name": "",
+          "permission_template": {
+            "Read": "Deny",
+            "Filter": "Deny",
+            "ViewComments": "Deny",
+            "AddComment": "Deny",
+            "ExportImage": "Deny",
+            "ExportData": "Deny",
+            "RunExplainData": "Deny",
+            "ShareView": "Deny",
+            "ViewUnderlyingData": "Deny",                    
+            "WebAuthoring": "Deny",
+            "ExportXml": "Deny",
+            "Write": "Deny",
+            "CreateRefreshMetrics": "Deny",
+            "ChangeHierarchy": "Deny",
+            "Delete": "Deny",
+            "ChangePermissions": "Allow"
+          }
+        },
+        {
+          "permission_group_name": "",
+          "permission_user_name": "Nirav.Padia",
+          "permission_template": {
+            "Read": "Allow",
+            "Filter": "Allow",
+            "ViewComments": "Allow",
+            "AddComment": "Allow",
+            "ExportImage": "Allow",
+            "ExportData": "Allow",
+            "RunExplainData": "Allow",
+            "ShareView": "Allow",
+            "ViewUnderlyingData": "Allow",                    
+            "WebAuthoring": "Allow",
+            "ExportXml": "Allow",
+            "Write": "Allow",
+            "CreateRefreshMetrics": "Allow",
+            "ChangeHierarchy": "Allow",
+            "Delete": "Allow",
+            "ChangePermissions": "Allow"
+          }
+        }
+      ]
     }
   ]
 }
