--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -71,13 +71,13 @@
       "publish_wb_data": {
         "server_name": "dev",
         "site_id": "e4fc3628-68b4-4a72-a956-9fc3c02192f4",
-        "site_name": "Enterprise",
-        "project_path": "Technology",
+        "site_name": "DataLab",
+        "project_path": "Development",
         "wb_name": "DTech New source",
         "file_path": "DTech New source.twb",
         "tags": [""],
         "hidden_views": [],
-        "is_site_default": true,
+        "is_site_default": false,
         "show_tabs": true
       },
       "is_wb_permissions_update": true,
