--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -22,10 +22,10 @@
           "permission_group_name": "All Users",
           "permission_user_name": "",
           "permission_template": {
-            "Read": "Deny",
-            "Filter": "Deny",
-            "ViewComments": "Deny",
-            "AddComment": "Deny",
+            "Read": "Allow",
+            "Filter": "Allow",
+            "ViewComments": "Allow",
+            "AddComment": "Allow",
             "ExportImage": "Deny",
             "ExportData": "Deny",
             "RunExplainData": "Deny",
@@ -73,8 +73,8 @@
         "site_id": "e4fc3628-68b4-4a72-a956-9fc3c02192f4",
         "site_name": "DataLab",
         "project_path": "Development",
-        "wb_name": "DTech New source",
-        "file_path": "DTech New source.twb",
+        "wb_name": "Superstore 20",
+        "file_path": "Superstore 20.twb",
         "tags": [""],
         "hidden_views": [],
         "is_site_default": false,
