--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -5,14 +5,14 @@
       "prod_server_url": "http://tableau-alb-316754542.us-east-1.elb.amazonaws.com/",
       "is_wb_publish": true,
       "publish_wb_data": {
-        "server_name": "dev",
-        "site_id": "e4fc3628-68b4-4a72-a956-9fc3c02192f4",
-        "site_name": "DataLab",
+        "server_name": "prod",
+        "site_id": "55239ed7-57b4-4b10-b269-b2b5fe71f280",
+        "site_name": "DataLabs",
         "project_path": "Development",
-        "wb_name": "DT new Packaged v1",
-        "file_path": "DT new Packaged v1.twbx",
-        "tags": ["New"],
-        "hidden_views": [],
+        "wb_name": "Forecast 2022",
+        "file_path": "Forecast 2022.twbx",
+        "tags": ["Price","Forecast"],
+        "hidden_views": ["Forecast"],
         "is_site_default": false,
         "show_tabs": true
       },
@@ -26,14 +26,14 @@
             "Filter": "Allow",
             "ViewComments": "Allow",
             "AddComment": "Allow",
-            "ExportImage": "Deny",
-            "ExportData": "Deny",
-            "RunExplainData": "Deny",
-            "ShareView": "Deny",
-            "ViewUnderlyingData": "Deny",                    
-            "WebAuthoring": "Deny",
-            "ExportXml": "Deny",
-            "Write": "Deny",
+            "ExportImage": "Allow",
+            "ExportData": "Allow",
+            "RunExplainData": "Allow",
+            "ShareView": "Allow",
+            "ViewUnderlyingData": "Allow",                    
+            "WebAuthoring": "Allow",
+            "ExportXml": "Allow",
+            "Write": "Allow",
             "CreateRefreshMetrics": "Deny",
             "ChangeHierarchy": "Deny",
             "Delete": "Deny",
@@ -52,12 +52,12 @@
             "ExportData": "Allow",
             "RunExplainData": "Allow",
             "ShareView": "Allow",
-            "ViewUnderlyingData": "Deny",                    
-            "WebAuthoring": "Deny",
-            "ExportXml": "Deny",
-            "Write": "Deny",
-            "CreateRefreshMetrics": "Deny",
-            "ChangeHierarchy": "Deny",
+            "ViewUnderlyingData": "Allow",                    
+            "WebAuthoring": "Allow",
+            "ExportXml": "Allow",
+            "Write": "Allow",
+            "CreateRefreshMetrics": "Allow",
+            "ChangeHierarchy": "Allow",
             "Delete": "Deny",
             "ChangePermissions": "Deny"
           }
@@ -67,7 +67,7 @@
     {
       "dev_server_url": "https://tableau.devinvh.com/",
       "prod_server_url": "http://tableau-alb-316754542.us-east-1.elb.amazonaws.com/",
-      "is_wb_publish": true,
+      "is_wb_publish": false,
       "publish_wb_data": {
         "server_name": "dev",
         "site_id": "e4fc3628-68b4-4a72-a956-9fc3c02192f4",
@@ -80,7 +80,7 @@
         "is_site_default": false,
         "show_tabs": true
       },
-      "is_wb_permissions_update": true,
+      "is_wb_permissions_update": false,
       "permissions": [
         {
           "permission_group_name": "All Users",
