new code and wb publish
new code and wb publish

--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -11,7 +11,7 @@
         "project_path": "Development",
         "wb_name": "Forecast 2022",
         "file_path": "Forecast 2022.twbx",
-        "tags": ["Price","Forecast"],
+        "tags": [],
         "hidden_views": ["Forecast"],
         "is_site_default": false,
         "show_tabs": true
