--- a/scripts/project-data.json
+++ b/scripts/project-data.json
@@ -5,15 +5,15 @@
       "prod_server_url": "http://tableau-alb-316754542.us-east-1.elb.amazonaws.com/",
       "is_wb_publish": true,
       "publish_wb_data": {
-        "server_name": "prod",
-        "site_id": "55239ed7-57b4-4b10-b269-b2b5fe71f280",
-        "site_name": "DataLabs",
-        "project_path": "Development",
+        "server_name": "dev",
+        "site_id": "834abe2d-18ac-46d3-9346-a2f3079941d2",
+        "site_name": "Enterprise",
+        "project_path": "D Working",
         "wb_name": "Forecast 2022",
         "file_path": "Forecast 2022.twbx",
         "tags": [],
         "hidden_views": ["Forecast"],
-        "is_site_default": false,
+        "is_site_default": true,
         "show_tabs": true
       },
       "is_wb_permissions_update": true,
@@ -80,7 +80,7 @@
         "is_site_default": false,
         "show_tabs": true
       },
-      "is_wb_permissions_update": false,
+      "is_wb_permissions_update": true,
       "permissions": [
         {
           "permission_group_name": "All Users",
